--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -4,4 +4,14 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+ <queries>
+    <package android:name="com.google.android.apps.maps" />
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:mimeType="text/plain" />
+    </intent>
+</queries>
 </manifest>
