--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.1
   flutter_launcher_icons: ^0.13.1
   flutter_riverpod: ^2.4.8
+  url_launcher: ^6.1.4
   http: 
 
 dev_dependencies:
