--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^2.4.8
   url_launcher: ^6.1.4
   http: 
+  firebase_core: ^2.27.0
+  google_maps_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
